--- a/about.html
+++ b/about.html
@@ -251,20 +251,23 @@
 
 
 
-        <section  class="about-low-area section-padding40 border-2">
+        <section>
             <div class="container">
-            <div class="row">
+                <u>
+            <div class="row p-2">
 
-                <div class="col-md-4">
-                    <a href="terms.html">TERMS & CONDITIONS</a>
+                <div class="col-md-4 text-center">
+                    <a href="terms.html" class="black-text">TERMS & CONDITIONS</a>
                 </div>
-                <div class="col-md-4">
-                    <a href="privacy.html">PRIVACY POLICY</a>
+                <div class="col-md-4 offset-md-1 text-left">
+                    <a href="privacy.html" class="black-text">PRIVACY POLICY</a>
                 </div>
-                <div class="col-md-4">
-                    <a href="refund.html">REFUND POLICY</a>
+                <div class="col-md-3 ">
+                    <a href="refund.html" class="black-text">REFUND POLICY</a>
                 </div>
             </div>
+           
+        </u>
         </div> 
         </section>
 
