--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
                                         </div>
                                         <div class="row">
                                             <div class="col">
-                                                <button type="button" class="btn-primary1 white-text">EXPLORE
-                                                    NOW</button>
+                                                <button type="button" class="btn-primary1"><a href="about.html" class="white-text">EXPLORE
+                                                    NOW</a></button>
                                             </div>
                                         </div>
 
@@ -561,7 +561,7 @@
                             </p>
                             <div class="row">
                                 <div class="col text-center ">
-                                    <button type="button" class=" btn-success-custom">Activate My OEM Panel</button>
+                                    <button type="button" class=" btn-success-custom"><a href="about.html"></a>Activate My OEM Panel</button>
                                 </div>
                             </div>
                         </div>
@@ -610,7 +610,7 @@
                                 <div class="col-md-4">
                                     <div class="card border-0 text-center">
                                         <div class="card-body">
-                                            <i class="fa fa-link fa-5x fa-3em" aria-hidden="true"></i>
+                                            <i class="fa fa-link fa-4x fa-3em" aria-hidden="true"></i>
                                             <br /><br />
                                             <h2 class="card-title">
                                                 Trade Assistance</h2>
@@ -625,7 +625,7 @@
                                 <div class="col-md-4">
                                     <div class="card border-0 text-center">
                                         <div class="card-body">
-                                            <i class="fa fa-rocket fa-5x fa-3em" aria-hidden="true"></i>
+                                            <i class="fa fa-rocket fa-4x fa-3em" aria-hidden="true"></i>
                                             <br /><br />
                                             <h2 class="card-title">
                                                 Less Administrative Work</h2>
@@ -724,7 +724,7 @@
                                 All GeM portal services at a single place.
                             <div class="row">
                                 <div class="col text-center">
-                                    <button type="button" class="btn-primary1 white-text">EXPLORE PACKAGES</button>
+                                    <button type="button" class="btn-primary1 white-text"><a href="#">EXPLORE PACKAGES</a></button>
                                 </div>
                             </div>
                             </p>
