--- a/services.html
+++ b/services.html
@@ -286,6 +286,26 @@
         </section>
 
 
+        <section>
+            <div class="container">
+                <u>
+            <div class="row p-2">
+
+                <div class="col-md-4 text-center">
+                    <a href="terms.html" class="black-text">TERMS & CONDITIONS</a>
+                </div>
+                <div class="col-md-4 offset-md-1 text-left">
+                    <a href="privacy.html" class="black-text">PRIVACY POLICY</a>
+                </div>
+                <div class="col-md-3 ">
+                    <a href="refund.html" class="black-text">REFUND POLICY</a>
+                </div>
+            </div>
+            
+        </u>
+        </div> 
+        </section>
+
 
          </main> <div id="footer"></div>
     </footer>
