--- a/contact.html
+++ b/contact.html
@@ -187,20 +187,32 @@
         </div>
     </section>
 
-    <section >
-        <div class="container p-5">
-        <div class="row justify-content-around">
+    <section>
+        <div class="container">
+            <u>
+        <div class="row p-2">
 
-            <div class="col-md-4">
-              <u>  <a href="terms.html">TERMS & CONDITIONS</a></u>
+            <div class="col-md-4 text-center">
+                <a href="terms.html" class="black-text">TERMS & CONDITIONS</a>
             </div>
-            <div class="col-md-4">
-             <u>   <a href="privacy.html">PRIVACY POLICY</a></u>
+            <div class="col-md-4 offset-md-1 text-left">
+                <a href="privacy.html" class="black-text">PRIVACY POLICY</a>
             </div>
-            <div class="col-md-4">
-             <u>   <a href="refund.html">REFUND POLICY</a></u>
+            <div class="col-md-3 ">
+                <a href="refund.html" class="black-text">REFUND POLICY</a>
             </div>
         </div>
+        <div class="row align-items-right p-2">
+
+            <div class="col-md-4 offset-md-2 text-center border-2">
+                <a href="feedback.html" class="black-text">FEEDBACK FORM</a>
+            </div>
+            <div class="col-md-4 ">
+                <a href="privacy.html" class="black-text">TRINITY TRAINING REGISTRATION</a>
+            </div>
+           
+        </div>
+    </u>
     </div> 
     </section>
 
