--- a/header.html
+++ b/header.html
@@ -35,7 +35,7 @@
           </div>
       </div>
   </div>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-top">
  
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -47,7 +47,7 @@
           <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item px-4">
-          <a class="nav-link" href="about.html">Our Products</a>
+          <a class="nav-link" href="about.html">Our Packages</a>
         </li>
         <li class="nav-item px-4">
             <a class="nav-link" href="services.html">Our Services</a>
