--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
                             </p>
                             <div class="row">
                                 <div class="col-md-4">
-                                    <div class="card border-0 text-center">
+                                    <div class="card border-0 text-center" style="padding-top: 20px;">
                                         <div class="card-body">
                                             <i class="fa fa-link fa-4x fa-3em" aria-hidden="true"></i>
                                             <br /><br />
@@ -623,7 +623,7 @@
                                 </div>
 
                                 <div class="col-md-4">
-                                    <div class="card border-0 text-center">
+                                    <div class="card border-0 text-center" style="padding-top: 20px;">
                                         <div class="card-body">
                                             <i class="fa fa-rocket fa-4x fa-3em" aria-hidden="true"></i>
                                             <br /><br />
