Feedback form created

--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
                                         </ul>
                                         <div class="row pb-15">
                                             <div class="col text-center">
-                                                <button type="button" class="orange-btn">Call Us Now</button>
+                                                <button type="button" class="orange-btn">1180/-</button>
                                             </div>
                                         </div>
 
@@ -110,7 +110,7 @@
                                         </ul>
                                         <div class="row pb-15">
                                             <div class="col text-center">
-                                                <button type="button" class="blue-btn">Call Us Now</button>
+                                                <button type="button" class="blue-btn"> <a href="#"></a>Pay 999/-</button>
                                             </div>
                                         </div>
                                     </div>
