--- a/privacy.html
+++ b/privacy.html
@@ -66,7 +66,7 @@ for (var i = 0; i < titlearray.length; i++) {
             <div class="container">
                 
             <div  class="section-tittle"><h2>Who we are</h2></div>
-            <p>Our website address is: https://gemconsultants.in.</p>
+            <p>Our website address is: https://trinitybalaji.in.</p>
             <div  class="section-tittle"><h2>What personal data we collect and why we collect it</h2></div>
 <div class="section-tittle">                    <h3>Comments</h3></div>
             <p>When visitors leave comments on the site we collect the data shown in the comments form, and also the visitor’s IP address and browser user agent string to help spam detection.</p>
