feedback image centered

--- a/contact.html
+++ b/contact.html
@@ -208,7 +208,7 @@
                 <a href="feedback.html" class="black-text">FEEDBACK FORM</a>
             </div>
             <div class="col-md-4 ">
-                <a href="privacy.html" class="black-text">TRINITY TRAINING REGISTRATION</a>
+                <a href="registration.html" class="black-text">TRINITY TRAINING REGISTRATION</a>
             </div>
            
         </div>
