trending product and services added on index page, all link name corrected

--- a/our-packages.html
+++ b/our-packages.html
@@ -102,7 +102,7 @@
                                             <li class="list-group-item m-4 text-center border-0">
                                                 <ul>
                                                     <li><i class="fas fa-check bluetextcolor"></i> You Will Be
-                                                        Registered On The GeM Portal.</li>
+                                                        Registered On The trinity balaji Portal.</li>
                                                     <li><i class="fas fa-check bluetextcolor"></i> Vendor Assessment Is
                                                         Not Included.</li>
                                                 </ul>
@@ -144,7 +144,7 @@
                             <div class="card-body">
                                 <h2 class="card-title font-15"><i class="fas fa-star"></i>
                                     REGISTRATION ON GEM PORTAL</h2>
-                                <p class="card-text text-rght font-14">We will register your company on gem portal.</p>
+                                <p class="card-text text-rght font-14">We will register your company on trinity balaji portal.</p>
                             </div>
                         </div>
                         <div class="card border-0">
@@ -171,7 +171,7 @@
                                     <i class="fas fa-star"></i>
                                     BRAND APPROVAL
                                 </h2>
-                                <p class="card-text font-14">We will approve your brand name on gem</p>
+                                <p class="card-text font-14">We will approve your brand name on trinity balaji</p>
                             </div>
                         </div>
                         <div class="card border-0">
@@ -198,7 +198,7 @@
                                         STEP</li>
                                     <li class="list-group-item p-5 m-5">
                                         <ul class=" font-15 text-left  basic-step">
-                                            <li><i class="fas fa-check bluetextcolor font-15"></i> Register On GeM</li>
+                                            <li><i class="fas fa-check bluetextcolor font-15"></i> Register On trinity balaji</li>
                                             <li><i class="fas fa-check bluetextcolor"></i> Activation Of OEM Panel</li>
                                             <li><i class="fas fa-check bluetextcolor"></i> Product Upload With Your Brand Name
                                             </li>
