--- a/services_details.html
+++ b/services_details.html
@@ -75,12 +75,12 @@
                                         <nav> 
                                             <ul id="navigation">                                                                                          
                                                 <li><a href="index.html">Home</a></li>
-                                                <li><a href="about.html">About</a></li>
-                                                <li><a href="services.html">Services</a></li>
+                                                <li><a href="our-packages.html">About</a></li>
+                                                <li><a href="our-services.html">Services</a></li>
                                                 <li><a href="project.html">Project</a></li>
-                                                <li><a href="blog.html">Blog</a>
+                                                <li><a href="trinity-training.html">Blog</a>
                                                     <ul class="submenu">
-                                                        <li><a href="blog.html">Blog</a></li>
+                                                        <li><a href="trinity-training.html">Blog</a></li>
                                                         <li><a href="blog_details.html">Blog Details</a></li>
                                                         <li><a href="elements.html">Element</a></li>
                                                     </ul>
@@ -146,7 +146,7 @@
                                 <img src="assets/img/gallery/icon1.png" alt="">
                             </div>
                             <div class="cat-cap">
-                                <h5><a href="services.html">Quality</a></h5>
+                                <h5><a href="our-services.html">Quality</a></h5>
                                 <p>We collect and analyze information about your general usage of the website, products, services, and courses.</p>
                             </div>
                         </div>
@@ -157,7 +157,7 @@
                                 <img src="assets/img/gallery/icon2.png" alt="">
                             </div>
                             <div class="cat-cap">
-                                <h5><a href="services.html">Reliablity</a></h5>
+                                <h5><a href="our-services.html">Reliablity</a></h5>
                                 <p>We collect and analyze information about your general usage of the website, products, services, and courses.</p>
                             </div>
                         </div>
@@ -168,7 +168,7 @@
                                 <img src="assets/img/gallery/icon3.png" alt="">
                             </div>
                             <div class="cat-cap">
-                                <h5><a href="services.html">Experience</a></h5>
+                                <h5><a href="our-services.html">Experience</a></h5>
                                 <p>We collect and analyze information about your general usage of the website, products, services, and courses.</p>
                             </div>
                         </div>
@@ -179,7 +179,7 @@
                                 <img src="assets/img/gallery/icon4.png" alt="">
                             </div>
                             <div class="cat-cap">
-                                <h5><a href="services.html">Manufacturing</a></h5>
+                                <h5><a href="our-services.html">Manufacturing</a></h5>
                                 <p>We collect and analyze information about your general usage of the website, products, services, and courses.</p>
                             </div>
                         </div>
