--- a/terms.html
+++ b/terms.html
@@ -84,11 +84,11 @@ for (var i = 0; i < titlearray.length; i++) {
 
 <p>We do not provide any assistance once the training is finished and we have informed our students about it.</p>
 
-<p> on GeM is subject to once your account is able to upload products and services only.</p>
+<p> on Trinity Balaji is subject to once your account is able to upload products and services only.</p>
 
 <p>Our Bidding packages does not mean that you will get the order or bids, that means you are participating in that order or bid only. We are not responsible if you don’t get any order or tender.</p>
 
-<p>As you buy our services you allow us the access of your accounts, documents, photos, prices, etc so that we can work for you on the GeM Portal. You also make us access everything on your behalf. And no one can blame us for anything legally.</p>
+<p>As you buy our services you allow us the access of your accounts, documents, photos, prices, etc so that we can work for you on the Trinity Balaji Portal. You also make us access everything on your behalf. And no one can blame us for anything legally.</p>
 
 <p>We only issue refund on bidding packs when there is no offer is given to customer. If any extra bid is given to customer then the customer is not eligible to take the refund.</p>
 
