--- a/trinity-training.html
+++ b/trinity-training.html
@@ -121,9 +121,9 @@
                         </div>
                         <p>
 
-                            We have experts of gem portal having years of work experience on government e-Marketplace.
+                            We have experts of Trinity Balaji portal having years of work experience on government e-Marketplace.
                             Our experts provide professional training to you so that you can professionally manage your
-                            gem account and get as much business from government e-marketplace. We provide gem portal
+                            Trinity Balaji account and get as much business from government e-marketplace. We provide Trinity Balaji portal
                             training at personalised level only to our customers.
                         </p>
                     </div>
@@ -153,8 +153,8 @@
                             sector undertaking in India. The sole purpose of this portal to enhance transparency,
                             efficiency, and speed in public procurement. It offers tools of reverse e-auction,
                             e-bidding, and demand aggregation to facilitate the government users to receive the best
-                            value or their money.gem registration, gem portal consultancy, gem seller registration,
-                            register on gem, register on government e market portal.
+                            value or their money.Trinity Balaji registration, Trinity Balaji portal consultancy, Trinity Balaji seller registration,
+                            register on Trinity Balaji, register on government e market portal.
                         </p>
                     </div>
                     <div class="col-xl-5 col-lg-5 col-md-8 offset-md-1 offset-sm-1">
@@ -323,7 +323,7 @@
                             <div class="text-center custom-width-70">
                                 <p>
                                     We are known for our training sessions. Our experts are training people regularly.
-                                    GeM Portal Seller training for those who want to grow their business on gem.
+                                    Trinity Balaji Portal Seller training for those who want to grow their business on Trinity Balaji.
                                     <br /><br />
                                     <div class="section-tittle"><h1><u class="orangeunderline font-17">EXPLORE OUR SERVICES
                                         READ OUR BLOG
@@ -375,7 +375,7 @@
                                                 <div class="col-md-10 pt-5">
                                                     <h1 class="card-title font-weight-bold">
                                                         Make them Experts</h1>
-                                                    <p class="card-text">Start handling your gem account as pro.
+                                                    <p class="card-text">Start handling your Trinity Balaji account as pro.
                                                     </p>
                                                 </div>
                                                 <div class="col-md-2 center-sm"> <span
@@ -454,7 +454,7 @@
                                 <h2 class="card-title display-6  vertical-text-center"><i
                                         class="fas fa-map-marker-alt fa-2x mr-4 orangeiconcolor"></i>
                                     Fast Results of Training</h2>
-                                <p>After training you will become a gem expert.</p>
+                                <p>After training you will become a Trinity Balaji expert.</p>
                             </div>
                         </div>
                     </div>
@@ -464,7 +464,7 @@
                                 <h2 class="card-title display-6  vertical-text-center"><i
                                         class="far fa-clipboard fa-2x mr-4 orangeiconcolor"></i> Secured Online Payments
                                 </h2>
-                                <p>After training you will become a gem expert.
+                                <p>After training you will become a Trinity Balaji expert.
 
                                 </p>
                             </div>
@@ -489,7 +489,7 @@
                     </div>
                     <div class="col-xl-6 col-lg-6 col-md-10 align-self-center">
 <div class="section-tittle">
-                        <h2 class="display-4 font-weight-bold font-25">Live GeM Seller Training Sessions
+                        <h2 class="display-4 font-weight-bold font-25">Live Trinity Balaji Seller Training Sessions
                         </h2>
                     </div>
                         <p>
@@ -498,7 +498,7 @@
                             <br /><br />
 
                             It’s all because of their experience in their job role. They know how to make you expert of
-                            GeM Portal. All our clients are working with us without any worries. Because they know that
+                            Trinity Balaji Portal. All our clients are working with us without any worries. Because they know that
                             we can resolved all of their issues.
 
 
@@ -514,7 +514,7 @@
                     <div class="col-xl-6 col-lg-6 col-md-10 align-self-center">
 <div class="section-title">
                         <h1 class="font-weight-bold">
-                            Personal GeM Seller Training For You
+                            Personal Trinity Balaji Seller Training For You
                         </h1>
                     </div>
                         <p>
@@ -522,7 +522,7 @@
                             our priority is to give you quality service.
                             <br /><br />
                             Our training is always one to one. We train a single company at a time. Our goal is not to
-                            make money but to deliver quality service to our clients. gem seller training, gem portal
+                            make money but to deliver quality service to our clients. Trinity Balaji seller training, Trinity Balaji portal
                             training.
                         </p>
                     </div>
@@ -553,14 +553,14 @@
                     <div class="col-xl-6 col-lg-6 col-md-10 align-self-center">
 <div class="section-title">
                         <h1 class="font-weight-bold">
-                            Virtual GeM Seller Training Sessions
+                            Virtual Trinity Balaji Seller Training Sessions
                         </h1>
                     </div>
                         <p>
-                            We provide complete personalized and virtual gem portal training to our clients. Our team of
+                            We provide complete personalized and virtual Trinity Balaji portal training to our clients. Our team of
                             experts is always busy is taking training sessions for our clients.
                             <br /><br />
-                            Each and every team member is having years of experience in e-Tendering and GeM Portal.
+                            Each and every team member is having years of experience in e-Tendering and Trinity Balaji Portal.
                             <br /><br />
                             All our customers are always satisfied with our services and training sessions.
                         </p>
@@ -585,7 +585,7 @@
                             <br /><br />
                             What things does our life time support covers?
                             <br /><br />
-                            In our support services, we cover everything related to GeM. We update you on your questions
+                            In our support services, we cover everything related to Trinity Balaji. We update you on your questions
                             and how it can be done.
                         </p>
                     </div>
@@ -624,7 +624,7 @@
                             Our mission is Straight and Simple. We want to provide quality services to our clients. As
                             we want to grow with our clients.
                             As we want to maintain the privacy and confidentiality of each of our clients, we provide
-                            complete personalized services to our customers. That’s why we provide personalized gem
+                            complete personalized services to our customers. That’s why we provide personalized Trinity Balaji
                             seller training sessions to our customers.
                         </p>
                     </div>
