--- a/elements.html
+++ b/elements.html
@@ -60,12 +60,12 @@
                                         <nav> 
                                             <ul id="navigation">                                                                                          
                                                 <li><a href="index.html">Home</a></li>
-                                                <li><a href="about.html">About</a></li>
-                                                <li><a href="services.html">Services</a></li>
+                                                <li><a href="our-packages.html">About</a></li>
+                                                <li><a href="our-services.html">Services</a></li>
                                                 <li><a href="project.html">Project</a></li>
-                                                <li class="active"><a href="blog.html">Blog</a>
+                                                <li class="active"><a href="trinity-training.html">Blog</a>
                                                     <ul class="submenu">
-                                                        <li><a href="blog.html">Blog</a></li>
+                                                        <li><a href="trinity-training.html">Blog</a></li>
                                                         <li><a href="blog_details.html">Blog Details</a></li>
                                                         <li><a href="elements.html">Element</a></li>
                                                     </ul>
