--- a/header.html
+++ b/header.html
@@ -1,33 +1,32 @@
 <!-- Preloader Start -->
 <header>
-  <!-- Header Start -->
-  <div class="header-area">
-      <div class="main-header ">
-          <div class="header-top d-lg-block">
-              <div class="container">
-                  <div class="row align-items-center">
-                    <div class="col-xs-5 col-lg-5"></div>
-                  <div class="col-xl-2 col-lg-2">
-                    <div class="col-xs-5 "></div>
+<!-- Header Start -->
+<div class="header-area">
+  <div class="main-header ">
+      <div class="header-top d-lg-block">
+          <div class="container">
+              <div class="row align-items-center">
+                <div class="col-xs-5 col-lg-5"></div>
+              <div class="col-xl-2 col-lg-2">
+                <div class="col-xs-5 "></div>
 
-                     <!-- Logo -->
-                       
-                          <div class="logo">
-                              <a href="index.html"><img class="trinity_logo"
-                                      src="assets/img/logo/Trinitybalajilogo.png" alt=""></a>
-                          </div>
-                </div>     
-                  </div>
+                 <!-- Logo -->
+                   
+                      <div class="logo">
+                          <a href="index.html"><img class="trinity_logo"
+                                  src="assets/img/logo/Trinitybalajilogo.png" alt=""></a>
+                      </div>
+            </div>     
               </div>
           </div>
-          <div class="header-bottom header-sticky">
-              <div class="container">
-                  <div class="row ">
-                      <div class="col-xl-12 col-lg-12 col-md-12">
-                          <div class="menu-wrapper ">
-                              <!-- Main-menu -->
-                              <div class="main-menu d-none d-lg-block">
-                              </div>
+      </div>
+      <div class="header-bottom header-sticky">
+          <div class="container">
+              <div class="row ">
+                  <div class="col-xl-12 col-lg-12 col-md-12">
+                      <div class="menu-wrapper ">
+                          <!-- Main-menu -->
+                          <div class="main-menu d-none d-lg-block">
                           </div>
                       </div>
                   </div>
@@ -35,7 +34,8 @@
           </div>
       </div>
   </div>
-<nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-top">
+</div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-top" style="padding: 50px;">
  
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -47,16 +47,16 @@
           <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item px-4">
-          <a class="nav-link" href="about.html">Our Packages</a>
+          <a class="nav-link" href="our-packages.html">Our Packages</a>
         </li>
         <li class="nav-item px-4">
-            <a class="nav-link" href="services.html">Our Services</a>
+            <a class="nav-link" href="our-services.html">Our Services</a>
           </li>
           <li class="nav-item px-4">
             <a class="nav-link" href="index.html">Required Documents</a>
           </li>
           <li class="nav-item px-4">
-            <a class="nav-link" href="blog.html">Trinity Training</a>
+            <a class="nav-link" href="trinity-training.html">Trinity Training</a>
           </li>
           <li class="nav-item px-4">
             <a class="nav-link" href="our-clients.html">Our Clients</a>
