--- a/our-services.html
+++ b/our-services.html
@@ -84,9 +84,9 @@
                 <div class="card border-0 text-center">
                     <div class="card-body">
                         <h2 class="card-title">
-                            <i class="fas fa-check orangeiconcolor"></i> GeM Portal Registration
+                            <i class="fas fa-check orangeiconcolor"></i> Trinity Balaji Portal Registration
                         </h2>
-                        <p class="card-text">Get registered on GeM with our GeM registration services.</p>
+                        <p class="card-text">Get registered on Trinity Balaji with our Trinity Balaji registration services.</p>
                     </div>
                 </div>
             </div>
@@ -97,7 +97,7 @@
                         <h2 class="card-title">
                             <i class="fas fa-check orangeiconcolor"></i> Upload Products Or Services
                         </h2>
-                        <p class="card-text">Make your products & services live on GeM & sell to all government
+                        <p class="card-text">Make your products & services live on Trinity Balaji & sell to all government
                             departments.</p>
                     </div>
                 </div>
@@ -106,9 +106,9 @@
                 <div class="card border-0 text-center">
                     <div class="card-body">
                         <h2 class="card-title">
-                            <i class="fas fa-check orangeiconcolor"></i> Bidding On GeM Portal
+                            <i class="fas fa-check orangeiconcolor"></i> Bidding On Trinity Balaji Portal
                         </h2>
-                        <p class="card-text text-rght">Bid on the e tenders you want to on the GeM portal</p>
+                        <p class="card-text text-rght">Bid on the e tenders you want to on the Trinity Balaji portal</p>
                     </div>
                 </div>
             </div>
@@ -122,7 +122,7 @@
                             <i class="fas fa-check orangeiconcolor"></i> Vendor Assessment Guidance
                         </h2>
                         <p class="card-text">We will guide you through all the requirements and process of Vendor
-                            Assessment on GeM portal.</p>
+                            Assessment on Trinity Balaji portal.</p>
                     </div>
                 </div>
             </div>
@@ -170,10 +170,10 @@
                         <div class="row">
                             <div class="col-xs-12 col-lg-12 col-md-10">
                                 <div class="mb-35">
-                                    <h4 id="firstToggle" onclick="showhide(mydiv)" class="mb-35 pbc-25 font-25 font-17" >How To Get GeM Registration?  <i class="fas fa-chevron-down"></i></h4>
+                                    <h4 id="firstToggle" onclick="showhide(mydiv)" class="mb-35 pbc-25 font-25 font-17" >How To Get Trinity Balaji Registration?  <i class="fas fa-chevron-down"></i></h4>
                                     <div id="firstShow" class="custom-hidden card pl-4">
                                         <p>
-                                        <h4>In order to obtain GeM Registration you must have following below documents
+                                        <h4>In order to obtain Trinity Balaji Registration you must have following below documents
                                             ready:</h4>
 
                                         <ul>
@@ -191,37 +191,37 @@
 
                                         <h4 class="mt-3 mb-3"> Once you have all of the above documents, our
                                             professionals can help you register
-                                            under the GeM portal.</h4>
+                                            under the Trinity Balaji portal.</h4>
                                         </p>
                                     </div>
-                                    <h4 id="secondToggle" onclick="showhide(mydiv)" class="pbc-25 mb-35 font-25 font-17">Why Product Listing On GeM Is
+                                    <h4 id="secondToggle" onclick="showhide(mydiv)" class="pbc-25 mb-35 font-25 font-17">Why Product Listing On Trinity Balaji Is
                                         Important?<i class="fas fa-chevron-down"></i></h4>
                                     <div id="secondShow" class="custom-hidden card p-4">
                                         <p>
 
-                                            GeM is an e-commerce portal where products and services can be sold to
+                                            Trinity Balaji is an e-commerce portal where products and services can be sold to
                                             government buyers when products and services are listed
                                             properly.<br /><br />
 
                                             You must upload product images, product specifications, price details,
                                             delivery terms, inspection, and test reports, etc in order to sell your
-                                            products on GeM portal.<br /><br />
+                                            products on Trinity Balaji portal.<br /><br />
 
                                             Our professionals can help you list your products and services properly.
                                         </p>
                                     </div>
-                                    <h4 id="thirdToggle" onclick="showhide(mydiv)" class="pbc-25 mb-35 font-25 font-17">Objective Of GeM Registration? <i class="fas fa-chevron-down"></i></h4>
+                                    <h4 id="thirdToggle" onclick="showhide(mydiv)" class="pbc-25 mb-35 font-25 font-17">Objective Of Trinity Balaji Registration? <i class="fas fa-chevron-down"></i></h4>
                                     <div id="thirdShow" class="custom-hidden card p-4">
-                                        <p>The purpose of getting a GeM registration is to ensure a smooth and effective
+                                        <p>The purpose of getting a Trinity Balaji registration is to ensure a smooth and effective
                                             procurement process for government offices requirement. Increase the
                                             transparency between private sellers and government buyers.</p>
                                     </div>
-                                    <h4 id="forthToggle" onclick="showhide(mydiv)" class="pbc-25 mb-35 display-5 font-25 font-17">Who is a Primary Buyer on GeM? <i class="fas fa-chevron-down"></i></h4>
+                                    <h4 id="forthToggle" onclick="showhide(mydiv)" class="pbc-25 mb-35 display-5 font-25 font-17">Who is a Primary Buyer on Trinity Balaji? <i class="fas fa-chevron-down"></i></h4>
                                     <div id="forthShow" class="custom-hidden card p-4">
 
                                         <p>
                                             <h4 class="mb-4">The following types of Authorized officers can register as Primary User on
-                                            GeM who is equivalent to –
+                                            Trinity Balaji who is equivalent to –
                                         </h4>
 
                                         <ul class="font-weight-bold">
@@ -269,7 +269,7 @@
                                 </div>
                             </div>
                             <p>
-                                Start working on GeM with us. Make your products and services on GeM. Offer your services all over the India.
+                                Start working on Trinity Balaji with us. Make your products and services on Trinity Balaji. Offer your services all over the India.
                             </p>
                             <div class="row">
                                 <div class="col text-center">
