changed the contents of trinity site

--- a/our-services.html
+++ b/our-services.html
@@ -86,7 +86,8 @@
                         <h2 class="card-title">
                             <i class="fas fa-check orangeiconcolor"></i> Trinity Balaji Portal Registration
                         </h2>
-                        <p class="card-text">Get registered on Trinity Balaji with our Trinity Balaji registration services.</p>
+                        <p class="card-text">Get registered on Trinity Balaji with our trinity balaji registration services.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -97,8 +98,8 @@
                         <h2 class="card-title">
                             <i class="fas fa-check orangeiconcolor"></i> Upload Products Or Services
                         </h2>
-                        <p class="card-text">Make your products & services live on Trinity Balaji & sell to all government
-                            departments.</p>
+                        <p class="card-text">Get registered on Trinity Balaji with our Trinity Balaji registration services.
+                        </p>
                     </div>
                 </div>
             </div>
