--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ We can help you with all your Trinity Balaji-related problems. Our Trinity Balaj
 
      
         <div class="container">
-            <div class="row mb-5">
+            <!-- <div class="row mb-5">
                 <div class="col-md-6 border-2">
                     <div class="section-tittle text-center">
                         <h2>Trending Products on Trinity Balaji</h2>
@@ -317,9 +317,14 @@ We can help you with all your Trinity Balaji-related problems. Our Trinity Balaj
 
 
                 </div>
-            </div>
+            </div> -->
             <div class="row">
                 <div class="col-md-6">
+                    <div class="section-tittle text-center ">
+                        <h2>Trending Products on Trinity Balaji</h2>
+                    </div>
+                    <h4 class="text-center">Most Popular Products On trinity balaji Portal These Days</h4>
+
                     <div id="carouselExample" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
@@ -389,6 +394,12 @@ We can help you with all your Trinity Balaji-related problems. Our Trinity Balaj
                     </div>
                 </div>
                 <div class="col-md-6">
+                    <div class="section-tittle text-center">
+                        <h2>Trending Services on Trinity Balaji</h2>
+                    </div>
+                    <h4 class="text-center">Most Popular Services On trinity balaji Portal These Days</h4>
+
+
                     <div id="carouselExample2" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
