text changed from trinity balaji to Trinity Balaji

--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
                         </div>
                     </div>
                     <p class="white-text">
-                        We are the best consultancy company for trinity balaji portal. Our experts will guide and provide you the best training for the trinity balaji portal. Contact us for more information we are always ready to answer all your queries.
+                        We are the best consultancy company for Trinity Balaji portal. Our experts will guide and provide you the best training for the Trinity Balaji portal. Contact us for more information we are always ready to answer all your queries.
                     </p>
                     <div class="container">
                     <i class="fab fa-facebook-f iconWrapper-blue"></i>
