--- a/our-services.html
+++ b/our-services.html
@@ -86,7 +86,7 @@
                         <h2 class="card-title">
                             <i class="fas fa-check orangeiconcolor"></i> Trinity Balaji Portal Registration
                         </h2>
-                        <p class="card-text">Get registered on Trinity Balaji with our trinity balaji registration services.
+                        <p class="card-text">Get registered on Trinity Balaji with our Trinity Balaji registration services.
                         </p>
                     </div>
                 </div>
